# strongswan-gmssl

./: .dockerignore  .gitignore  AUTHORS  CHANGELOG-详细更改记录.md  CLIENT-CONNECTION-TROUBLESHOOTING.md  CLOUD-QUICK-START.md  CLOUD-TEST-SUMMARY.md  COMMIT-MESSAGE.md  CONFIG-FIX-REPORT.md  CURRENT-STATUS-REPORT.md  CentOS安装配置指南.md  DEPLOY-COMMANDS.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-GUIDE.md  Dockerfile  Dockerfile.build  Dockerfile.gmsm-build  Dockerfile.gmssl  Dockerfile.ubuntu  Docker构建优化说明.md  Docker测试指南.md  Docker编译测试指南.md  Docker部署指南.md  FINAL-FIX-TEST-GUIDE.md  GMSM-TESTING-FINAL-STEPS.md  GMSM-VPN-Testing-Report.md  GMSM插件集成操作步骤.md  GmSSL-API修复说明.md  GmSSL部署指南.md  GmSSL集成实施计划.md  IKE密钥vs ESP密钥详解.md  Makefile.am  NEXT-STEPS-GMSM-TESTING.md  PROJECT-CLEANUP-REPORT.md  PROJECT-SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICK-START.md  README.md  README.md.backup  ROOT-CAUSE-ANALYSIS.md  (+129 more)
.private/: server-credentials.md
config/: strongswan.conf  strongswan.conf.gmsm  swanctl-client-gmsm.conf  swanctl-server-gmsm.conf
deployment-scripts/: COMMANDS-CHEATSHEET.md  README.md  TESTING-README.md  build-gmssl.sh  decrypt-sm2-key.sh  deploy-client.sh  deploy-server.sh  generate-sm2-certs.sh  (+2 more)
src/libstrongswan/plugins/gmsm/: Makefile.am  gmsm_plugin.c  gmsm_plugin.h  gmsm_sm2_dh.c  gmsm_sm2_dh.h  gmsm_sm2_private_key.c  gmsm_sm2_private_key.h  gmsm_sm2_public_key.c  gmsm_sm2_public_key.h  gmsm_sm3_hasher.c  gmsm_sm3_hasher.h  gmsm_sm3_prf.c  gmsm_sm3_prf.h  gmsm_sm3_signer.c  gmsm_sm3_signer.h  gmsm_sm4_crypter.c  gmsm_sm4_crypter.h  gmsm_sm4_gcm_aead.c  gmsm_sm4_gcm_aead.h
(+79 files in other folders)
